fix: h1 text-align

--- a/blocks/user/__title/user__title.css
+++ b/blocks/user/__title/user__title.css
@@ -6,6 +6,7 @@
   padding: 0;
   margin: 0;
   color: #FFFFFF;
+  text-align: center;
 }
 
 @media screen and (max-width: 767px) {
